--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tsparticles": "^3.9.1",
     "tsparticles-slim": "^2.12.0"
